--- a/index.html
+++ b/index.html
@@ -3,15 +3,21 @@
     <head> <title>ODIN_RECIPES</title> <meta charset="UTF-8"> <meta name="author" description="This is the first project from odin, based on recipes"> 
         </head>
         <body>
+            <header>
             <h1>ODIN RECIPES</h1>
-            <aside>
-            <p> <h2>List of Odin recipes </h2>
-                <ul>
+                 <p> <h2>List of Odin recipes </h2>
+               <nav>
+                 <ul>
                 <li><a href="./recipes/Cooker_pull_pork.html" target="_blank" ref="noopener noreferrer"> Slow Cooker pull Pork </a>
                 </li>
                 <li><a href="./recipes/Slow-Cooker-Pepper-Steak.html" target="_blank" ref="noopener noreferrer"> Slow Cooker Pepper Steak</a></li>
                 </ul>
+                </nav>
                 </p>
-            </aside>
+                </header>
+          
+            <footer> 
+                <p><a href="https://www.allrecipes.com/" target="_blank"> <q><cite> Check out for more recipes </cite></q> </p>
+            </footer>
             </body>
 </html>
