--- a/recipes/Cooker_pull_pork.html
+++ b/recipes/Cooker_pull_pork.html
@@ -2,8 +2,11 @@
 <html lang="en">
     <head> <title>Slow Cooker Pulled Pork</title> <meta charset="UTF-8"> <meta name="mgr-cmd" description="This is the first project from odin, based on recipes"> 
         </head>
-        <body>
+        <body><header>
+
             <h1>Slow Cooker Pulled Pork </h1>
+                </header>
+                <main>
             <fig> 
                 <img src="https://www.allrecipes.com/thmb/FIk6C3Fa2Sj5l2txH0CPvwjaXOU=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/141678-slow-cooker-pulled-pork-VAT-4x3-2-18fff567a4134e1c83d8b60e1dd9dc28.jpg" 
                 height="300" width="300" alt="slow cooker pulled pork"> 
@@ -32,6 +35,10 @@
                 </article>
 
                 </article>
+                </main>
+                <footer> 
+
                 <a href="../index.html"> Home</a> 
-        </body>
+                 </footer>
+            </body>
 </html>
