--- a/recipes/Slow-Cooker-Pepper-Steak.html
+++ b/recipes/Slow-Cooker-Pepper-Steak.html
@@ -3,7 +3,10 @@
     <head> <title>Slow-Cooker-Pepper-Steak</title> <meta charset="UTF-8"> <meta name="author" description="This is the first project from odin, based on recipes"> 
         </head>
         <body>
+            <header>
             <h1>SLow Cooker Pepper Steak </h1>
+            </header>
+            <main>
             <article>
              <h1>Ingredients </h1>
              <fig>
@@ -50,8 +53,10 @@
                 </ol> </p> 
 
             </article>
-        </article>
-
-        <a href="../index.html"> Home</a> 
+            </article>
+            </main>
+            <footer>
+        <a href="../index.html"> Home</a>
+        </footer> 
             </body>
 </html>
